# mv-camera-ros

./: CMakeLists.txt  README.md  package.xml
cfg/: camera_controls.cfg
launch/: mv-camera-ros.launch
scripts/: build.sh  record_data.sh  run_caffe.sh  run_camera.sh  run_camera_sudo.sh  run_velodyne.sh  start_data_recording.sh  test.sh
src/: MVCameraCapture.cpp  MVCameraCapture.h  cv_camera_node.cpp  driver.cpp  driver.h
